2003-02-23  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/demangle_symbol.cpp:
	* libutil++/demangle_symbol.h: move to
	* libregex/demangle_symbol.cpp:
	* libregex/demangle_symbol.h: here to avoid circular reference between
	  libutil++ and libregex
	* libregex/Makefile.am:
	* libutil++/Makefile.am: update according to file move

	* pp/Makefile.am:
	* pp/op_time.cpp:
	* pp/op_time_options.cpp:
	* pp/op_to_source.cpp:
	* pp/op_to_source_options.cpp:
	* pp/oprofpp.cpp:
	* pp/oprofpp_options.cpp: add -D --Demangle options enabling C++
	  demangled name filtering.

2003-02-23  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/string_manip.h:
	* libutil++/string_manip.cpp: trim(), ltrim(), rtrim() new functions

	* Makefile.am: handle libregex directory
	* configure.in: handle libregex/Makefile

	* libregex/.cvsignore:
	* libregex/Makefile.am :
	* libregex/mangled-name.txt:
	* libregex/op_regex.cpp:
	* libregex/op_regex.h:
	* libregex/regex_test.cpp:
	* libregex/stl.pat: new file implementing a match and replace regular
	  expression around glibc regex. Not used for now, next commit will
	  use this for pp tools C++ name demangling.

2003-02-22  John Levon  <levon@movementarian.org>

	* configure.in: fix X, non-Qt build case

2003-02-22  John Levon  <levon@movementarian.org>

	* libutil++/Makefile.am: fix make dist

2003-02-21  Dave Jones <davej@codemonkey.org.uk>

	* configure.in: Enable building on hammer again.

2003-02-21  John Levon  <levon@movementarian.org>

	* utils/opcontrol: "Params used" was lying

2003-02-20  John Levon  <levon@movementarian.org>

	* daemon/opd_image.c: Fixed a bitch of a bug with separate-kernel,
	  now attribution of kernel samples should be more accurate

2003-02-20  John Levon  <levon@movementarian.org>

	* utils/opcontrol: set LIB_SAMPLES if KERNEL_SAMPLES in .daemonrc

2003-02-20  John Levon  <levon@movementarian.org>

	* dae/opd_stats.h:
	* dae/opd_stats.c:
	* daemon/opd_stats.h:
	* daemon/opd_stats.c:
	* dae/opd_proc.c: