@@ -1,3 +1,8 @@
+2003-02-23  John Levon  <levon@movementarian.org>
+
+	* libregex/op_regex.h:
+	* libregex/regex_test.cpp: fix std::
+
 2003-02-23  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* libutil++/demangle_symbol.cpp:
